# funcraft

./: .eslintignore  .eslintrc  .gitignore  .travis.yml  LICENSE  Makefile  README-en.md  README-zh.md  README.md  check-version.js  package-lock.json  package.json  tsconfig.json
lib/: check-version.js  client.js  conf.js  cors.js  debug.js  definition.js  deps.js  docker-opts.js  docker-support.js  docker.js  error-message.js  error-processor.js  exception-handler.js  fc-error-transform.js  fc.js  fnf.js  function.js  nas.js  options.js  parse.js  profile.js  ram.js  read.js  security-group.js  tpl.js  trigger.js  unref-timeout.js  update-notifier.js  visitor.js  vpc.js  vswitch.js  zip.js
script/: binary.sh  upload.sh
templates/event-custom-cpp/{{ projectName }}/sample/: CMakeLists.txt
templates/event-custom-cpp/{{ projectName }}/sample/include/: echo_handler.h
templates/event-custom-cpp/{{ projectName }}/sample/src/: register_handler.cpp
templates/event-custom-cpp/{{ projectName }}/sample/src/handlers/: echo_handler.cpp
templates/http-custom-cpp/{{ projectName }}/cpp_runtime/: CMakeLists.txt
templates/http-custom-cpp/{{ projectName }}/cpp_runtime/src/: handler.cpp
test/: client.test.js  conditions.js  cors.test.js  debug.test.js  definition.test.js  docker-opts.test.js  docker-support.test.js  docker.test.js  error-processor.test.js  fc-error-transform.test.js  fc.test.js  fs-extra.test.js  fun-invoke.test.js  function.test.js  inquirer-mock-prompt.js  nas.test.js  profile.test.js  ram.test.js  test-utils.js  tpl-mock-data.js  tpl.test.js  trigger.test.js  vpc.test.js  (+3 more)
(+1100 files in other folders)
